<resources>
    <string name="app_name">CameraX Extreme</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="fragment_label_capture">Capture Fragment</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="fragment_label_settings">Settings Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Capture Strings -->
    <string name="photo_taken_action">Photo Taken</string>
    <string name="take_photo_button">Take Photo</string>
    <!-- Camera Data -->
    <string name="camera_exposure_data_title">Camera Exposure</string>
    <string name="camera_exposure_compensation_supported">Exposure Compensation Supported: %s</string>
    <string name="camera_exposure_compensation_index">Exposure Compensation Index: %s</string>
    <string name="camera_exposure_compensation_range">Exposure Compensation Range: %s</string>
    <string name="camera_exposure_compensation_step_size">Exposure Compensation Step Size: %s</string>

    <string name="exposure_step_up_">Step Up</string>
    <string name="exposure_step_down">Step Down</string>
    <!-- Settings -->
    <string name="reset_camera_exposure_label">Reset Camera Exposure</string>
    <string name="set_camera_resolution_label">Set Camera Resolution</string>
    <string name="raw_support_test_title">RAW Camera Support Data</string>
    <string name="raw_test_title">RAW Camera: %s</string>
    <string name="raw_test_label">Validate Raw Support</string>
</resources>