<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/CaptureFragment">

    <fragment
        android:id="@+id/CaptureFragment"
        android:name="com.digital_tectonics.cameraxextreme.ui.CaptureFragment"
        android:label="@string/fragment_label_capture"
        tools:layout="@layout/fragment_capture" >

        <action
            android:id="@+id/action_CaptureFragment_to_SecondFragment"
            app:destination="@id/SettingsFragment" />

    </fragment>

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.digital_tectonics.cameraxextreme.ui.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SettingsFragment" />

    </fragment>
    <fragment
        android:id="@+id/SettingsFragment"
        android:name="com.digital_tectonics.cameraxextreme.ui.SettingsFragment"
        android:label="@string/fragment_label_settings"
        tools:layout="@layout/fragment_settings">

        <action
            android:id="@+id/action_SettingsFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />

    </fragment>
</navigation>